--- a/plataforma/templates/pages/no_detail.html
+++ b/plataforma/templates/pages/no_detail.html
@@ -27,7 +27,7 @@
     </div>
     <div class="row">
       <div class="col-md-8 col-md-offset-2">
-        <div class="quem-sou text-justify">{{ nodo.quem_sou|linebreaks }}</div>
+        <div class="quem-sou text-justify">{{ nodo.quem_sou|default:""|linebreaks }}</div>
         {% if nodo.user == user %}
           <a href="{% url "no_update" %}" class="btn btn-prospera btn-edit" role="button">Editar</a>
         {% endif %}
