Adicionando OUT para tabela e arrumando espaçamento

--- a/plataforma/static/dev/scss/base.scss
+++ b/plataforma/static/dev/scss/base.scss
@@ -693,6 +693,7 @@ h4{font-size: 12px;}
             &.out{
               background-color: $azul;
               color: $branco;
+              padding: 12px 5px;
             }
           }
         }
