--- a/plataforma/templates/pages/no_detail.html
+++ b/plataforma/templates/pages/no_detail.html
@@ -81,14 +81,14 @@
           <tr>
             <td scope="row">4min ago</td>
             <td><strong>1P2B6KPTC73uJcBLVwKG5rPxkxn9peVw4V</strong></td>
-            <td><span class="out">IN</span></td>
+            <td><span class="out">OUT</span></td>
             <td><strong>1P2B6KPTC73uJcBLVwKG5rPxkxn9peVw4V</strong></td>
             <td><strong>0.2644934</strong> PRSP</td>
           </tr>
           <tr>
             <td scope="row">4min ago</td>
             <td><strong>1P2B6KPTC73uJcBLVwKG5rPxkxn9peVw4V</strong></td>
-            <td><span class="out">IN</span></td>
+            <td><span class="out">OUT</span></td>
             <td><strong>1P2B6KPTC73uJcBLVwKG5rPxkxn9peVw4V</strong></td>
             <td><strong>0.2644934</strong> PRSP</td>
           </tr>
