--- a/plataforma/templates/pages/landing_page.html
+++ b/plataforma/templates/pages/landing_page.html
@@ -109,15 +109,15 @@
     <div class="row text-center">
       <div class="col-md-2 col-md-offset-3">
         <h4><i class="fa fa-facebook" aria-hidden="true"></i> Página no Facebook:</h4>
-        <img class="qr-code" src="{% static 'img/qr-exemplo.jpg' %}">
+        <img class="qr-code" src="https://api.qrserver.com/v1/create-qr-code/?size=130x130&bgcolor=000000&color=ffffff&data=https://www.facebook.com/8Prospera/">
       </div>
       <div class="col-md-2">
         <h4><i class="fa fa-facebook" aria-hidden="true"></i> Grupo no Facebook:</h4>
-        <img class="qr-code" src="{% static 'img/qr-exemplo.jpg' %}">
+        <img class="qr-code" src="https://api.qrserver.com/v1/create-qr-code/?size=130x130&bgcolor=000000&color=ffffff&data=https://www.facebook.com/groups/laboriosa89/">
       </div>
       <div class="col-md-2">
         <h4><i class="fa fa-whatsapp" aria-hidden="true"></i> Grupo no Whatsapp:</h4>
-        <img class="qr-code" src="{% static 'img/qr-exemplo.jpg' %}">
+        <img class="qr-code" src="https://api.qrserver.com/v1/create-qr-code/?size=130x130&bgcolor=000000&color=ffffff&data=https://chat.whatsapp.com/G0Ax9M0bmZE1EDPS5lJwTf">
       </div>
 
       <div class="col-xs-12">
