Trocando mensagem de sucesso, e adicionando resumo

--- a/plataforma/templates/pages/nos_list.html
+++ b/plataforma/templates/pages/nos_list.html
@@ -32,7 +32,7 @@
               {% endif %}
               <div class="caption">
                 <h2>{{ nos.nome }}</h2>
-                <p>{{ nos.descricao }}</p>
+                <p>{{ nos.resumo }}</p>
               </div>
             </div>
           </a>
