--- a/plataforma/templates/base.html
+++ b/plataforma/templates/base.html
@@ -15,7 +15,7 @@
     <meta name="author" content="Bode.io">
     <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
     <link href="{% static "css/font-awesome.min.css" %}" rel="stylesheet">
-    <link href="{% static "css/base.min.css" %}" rel="stylesheet">
+    <link href="{% static "css/base.min.css" %}?v=1.0" rel="stylesheet">
 </head>
 <body {% block bodyclass %}{% endblock %}>
     <nav class="navbar navbar-default navbar-static-top">
