Margin 0 para thumbnail

--- a/plataforma/static/dev/scss/base.scss
+++ b/plataforma/static/dev/scss/base.scss
@@ -344,7 +344,7 @@ h4{font-size: 12px;}
           }
           .thumbnail{
             background-color: $azul;
-            border: solid 1px transparent;
+            border: 0;
             height: 380px;
             opacity: .8;
             img{
