Adicionando botão de login com Facebook

--- a/plataforma/static/dev/scss/_colors.scss
+++ b/plataforma/static/dev/scss/_colors.scss
@@ -15,5 +15,7 @@ $branco: rgb(255,255,255);
 
 $github: rgb(51, 51, 51);
 $twitter: rgb(84, 171, 235);
-$facebook: rgb(58, 89, 152);
+$facebook: rgba(61, 97, 173, 1);
+$facebook_bg: rgba(54, 88, 153, 1);
+
 $google: rgb(219, 72, 18);
