--- a/plataforma/templates/pages/partial_login.html
+++ b/plataforma/templates/pages/partial_login.html
@@ -19,5 +19,8 @@
       </div>
       <button class="btn btn-prospera btn-lg" type="submit" style="margin-top: 40px;">Entrar</button>
     </form>
+    <div class="col-xs-12">
+        <a href="{% url 'social:begin' 'facebook' %}" class="btn btn-primary btn-facebook"><i class="fa fa-facebook-square" aria-hidden="true"></i>  Entrar com Facebook</a>
+    </div>
   <!-- </div> -->
 </div>
