--- a/plataforma/templates/base.html
+++ b/plataforma/templates/base.html
@@ -18,7 +18,7 @@
     <link href="{% static "css/base.min.css" %}?v=1.1" rel="stylesheet">
 </head>
 <body {% block bodyclass %}{% endblock %}>
-    <nav class="navbar navbar-default navbar-static-top">
+    <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
           <!-- Brand and toggle get grouped for better mobile display -->
           <div class="navbar-header">
