Arrumando cores para suportar barra fixa no topo

--- a/plataforma/static/dev/scss/_colors.scss
+++ b/plataforma/static/dev/scss/_colors.scss
@@ -1,12 +1,19 @@
 $prime: rgba(255, 41, 106, 1);
 $primeHighlight: rgb(152, 20, 88);
 $primeCinza: rgba(255, 80, 134, 1);
+$primeBarra: rgba(255, 66, 123, 1);
 
 $azul: rgba(17, 28, 60, 1);
 $azulClaro: rgba(33, 239, 233, 1);
-$azulclarin: rgba(111, 244, 241, 1);
+
+$azulComunidadeInputBg: rgba(59, 70, 95, 1);
+$azulBarra: rgba(40, 50, 81, 1);
+
 $azulObjeto: rgba(20, 92, 237, 1);
-$azulCinza: rgba(59, 70, 95, 1);
+$azulObjetoBarra: rgba(35, 105, 244, 1);
+
+$azulPerfilInputBg: rgba(111, 244, 241, 1);
+$azulPerfilBarra: rgba(42, 240, 236, 1);
 
 $cinza: rgb(82, 82, 82);
 
