Adicionando primeiros fix’s responsivos

--- a/plataforma/static/dev/scss/base.scss
+++ b/plataforma/static/dev/scss/base.scss
@@ -241,7 +241,7 @@ h4{font-size: 12px;}
         }
         .prsps-counter{
           background: white;
-          width: 382px;
+          max-width: 382px;
           margin: auto;
           padding: 8px;
           img{
