--- a/plataforma/templates/base.html
+++ b/plataforma/templates/base.html
@@ -13,6 +13,7 @@
     <meta charset="utf-8">
     <title>Prospera</title>
     <meta name="author" content="Bode.io">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
     <link href="{% static "css/font-awesome.min.css" %}" rel="stylesheet">
     <link href="{% static "css/base.min.css" %}?v=1.1" rel="stylesheet">
