--- a/plataforma/templates/pages/landing_page.html
+++ b/plataforma/templates/pages/landing_page.html
@@ -26,7 +26,7 @@
 
     <h3 class="text-center">Distribuição, Movimentação e Contribuição</h3>
 
-    <div class="prospera-margin prsps-dist text-center container">
+    <div class="prospera-margin prsps-dist text-center container" style="overflow-x:auto;">
       <table class="table table-bordered">
         <thead>
           <tr>
