--- a/plataforma/templates/pages/no_detail.html
+++ b/plataforma/templates/pages/no_detail.html
@@ -38,69 +38,10 @@
   </section>
 
   <section>
+
     <div class="prospera-margin prsps-dist text-center container">
-      <table class="table table-bordered">
-        <thead>
-          <tr>
-            <th></th>
-            <th>Quanto ganhou<br> com a Prospera</th>
-            <th>Quanto contribuiu<br> para o nós</th>
-            <th>Quanto recebeu<br> como nós</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td scope="row"><strong>1P2B6KPTC73uJcBLVwKG5rPxkxn9peVw4V</strong></td>
-            <td>100.000</td>
-            <td>10.000</td>
-            <td>20.000</td>
-          </tr>
-        </tbody>
-      </table>
-
-      <h3 style="margin-top: 80px;">Transações</h3>
-
-      <table class="table table-bordered">
-        <thead>
-          <tr>
-            <th>Age</th>
-            <th>From</th>
-            <th></th>
-            <th>To</th>
-            <th>Value</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td scope="row">4min ago</td>
-            <td><strong>1P2B6KPTC73uJcBLVwKG5rPxkxn9peVw4V</strong></td>
-            <td><span class="in">IN</span></td>
-            <td><strong>1P2B6KPTC73uJcBLVwKG5rPxkxn9peVw4V</strong></td>
-            <td><strong>0.2644934</strong> PRSP</td>
-          </tr>
-          <tr>
-            <td scope="row">4min ago</td>
-            <td><strong>1P2B6KPTC73uJcBLVwKG5rPxkxn9peVw4V</strong></td>
-            <td><span class="out">OUT</span></td>
-            <td><strong>1P2B6KPTC73uJcBLVwKG5rPxkxn9peVw4V</strong></td>
-            <td><strong>0.2644934</strong> PRSP</td>
-          </tr>
-          <tr>
-            <td scope="row">4min ago</td>
-            <td><strong>1P2B6KPTC73uJcBLVwKG5rPxkxn9peVw4V</strong></td>
-            <td><span class="out">OUT</span></td>
-            <td><strong>1P2B6KPTC73uJcBLVwKG5rPxkxn9peVw4V</strong></td>
-            <td><strong>0.2644934</strong> PRSP</td>
-          </tr>
-          <tr>
-            <td scope="row">4min ago</td>
-            <td><strong>1P2B6KPTC73uJcBLVwKG5rPxkxn9peVw4V</strong></td>
-            <td><span class="in">IN</span></td>
-            <td><strong>1P2B6KPTC73uJcBLVwKG5rPxkxn9peVw4V</strong></td>
-            <td><strong>0.2644934</strong> PRSP</td>
-          </tr>
-        </tbody>
-      </table>
+      {% include 'pages/partial_no_status.html' %}
+      {% include 'pages/partial_no_transactions.html' %}
     </div>
   </section>
   {% if nodo.contato_facebook or nodo.contato_whatsapp or nodo.contato_zoom  %}
