Adicionando js para buscar url de cada spinner

--- a/plataforma/static/dev/scss/base.scss
+++ b/plataforma/static/dev/scss/base.scss
@@ -863,4 +863,12 @@ h4{font-size: 12px;}
       }
     }
   }
+  .loading-spinner{
+    font-size:24px;
+    vertical-align: middle;
+    color: $branco;
+    &.invert{
+      color: $preto;
+    }
+  }
 }
