--- a/plataforma/templates/pages/no_detail.html
+++ b/plataforma/templates/pages/no_detail.html
@@ -40,7 +40,11 @@
   <section>
 
     <div class="prospera-margin prsps-dist text-center container">
+      <i class="fa fa-circle-o-notch fa-spin loading-spinner" data-url=""></i>
       {% include 'pages/partial_no_status.html' %}
+
+      <h3 style="margin-top: 80px;">Transações</h3>
+      <i class="fa fa-circle-o-notch fa-spin loading-spinner" data-url=""></i>
       {% include 'pages/partial_no_transactions.html' %}
     </div>
   </section>
