Adicionando chamadas ajax para buscar elementos de tabela

--- a/plataforma/templates/pages/landing_page.html
+++ b/plataforma/templates/pages/landing_page.html
@@ -20,7 +20,7 @@
       <h3>Emissão de Prospers até agora:</h3>
       <div class="prsps-counter">
         <i class="fa fa-circle-o-notch fa-spin loading-spinner invert" data-url=""></i>
-        {% include 'pages/partial_landing_total.html' %}
+        <!-- {% include 'pages/partial_landing_total.html' %} -->
       </div>
     </div>
 
@@ -28,7 +28,7 @@
 
     <div class="prospera-margin prsps-dist text-center container" style="overflow-x:auto;">
       <i class="fa fa-circle-o-notch fa-spin loading-spinner" data-url=""></i>
-      {% include 'pages/partial_landing_history.html' %}
+      <!-- {% include 'pages/partial_landing_history.html' %} -->
     </div>
   </section>
 
