--- a/plataforma/templates/pages/no_detail.html
+++ b/plataforma/templates/pages/no_detail.html
@@ -41,11 +41,11 @@
 
     <div class="prospera-margin prsps-dist text-center container">
       <i class="fa fa-circle-o-notch fa-spin loading-spinner" data-url=""></i>
-      {% include 'pages/partial_no_status.html' %}
+      <!-- {% include 'pages/partial_no_status.html' %} -->
 
       <h3 style="margin-top: 80px;">Transações</h3>
-      <i class="fa fa-circle-o-notch fa-spin loading-spinner" data-url=""></i>
-      {% include 'pages/partial_no_transactions.html' %}
+      <i class="fa fa-circle-o-notch fa-spin loading-spinner" data-url="{% url "no_detail_public_transactions" nodo.user.id %}"></i>
+      <!-- {% include 'pages/partial_no_transactions.html' %} -->
     </div>
   </section>
   {% if nodo.contato_facebook or nodo.contato_whatsapp or nodo.contato_zoom  %}
