--- a/plataforma/templates/base.html
+++ b/plataforma/templates/base.html
@@ -23,6 +23,7 @@
         <div class="container">
           <!-- Brand and toggle get grouped for better mobile display -->
           <div class="navbar-header">
+            <h4 class="header-title visible-xs" style="">PROSPERA</h4>
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
               <span class="sr-only">Toggle navigation</span>
               MENU
