--- a/plataforma/templates/pages/no_detail.html
+++ b/plataforma/templates/pages/no_detail.html
@@ -39,7 +39,7 @@
 
   {% if nodo.carteira %}
   <section>
-    <div class="prospera-margin prsps-dist text-center container">
+    <div class="prospera-margin prsps-dist text-center container" style="overflow-x:auto;">
       <i class="fa fa-circle-o-notch fa-spin loading-spinner" data-url="{% url "no_detail_public_summary" nodo.user.id %}"></i>
       <!-- {% include 'pages/partial_no_status.html' %} -->
 
