--- a/plataforma/templates/pages/partial_login.html
+++ b/plataforma/templates/pages/partial_login.html
@@ -12,7 +12,7 @@
       <div class="form-group">
         <input type="password" id="password" name="password" placeholder="SENHA" class="form-control" />
         <p class="help-block"></p>
-        <span class="help-block forgot"><a href="" style="text-transform: none;">Esqueci minha senha</a></span>
+        <!-- <span class="help-block forgot"><a href="" data-toggle="changeLogin" data-target="formSenhaModal" style="text-transform: none;">Esqueci minha senha</a></span> -->
       </div>
       <div class="has-error">
         <p id="__all__" class="help-block"></p>
