--- a/plataforma/templates/base.html
+++ b/plataforma/templates/base.html
@@ -12,9 +12,11 @@
 <head>
     <meta charset="utf-8">
     <title>Prospera</title>
+    <meta name="description" content="Organizações Modelo Abundante">
+    <meta name="keywords" content="prospera,prsp,blockchain,eth,ethereum,brasil,brazil,">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="Bode.io">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-
 
     <link rel="apple-touch-icon" sizes="57x57" href="{% static 'img/favicon/apple-icon-57x57.png' %}">
     <link rel="apple-touch-icon" sizes="60x60" href="{% static 'img/favicon/apple-icon-60x60.png' %}">
@@ -37,6 +39,16 @@
     <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
     <link href="{% static "css/font-awesome.min.css" %}" rel="stylesheet">
     <link href="{% static "css/base.min.css" %}?v=1.1" rel="stylesheet">
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-93955905-4', 'auto');
+      ga('send', 'pageview');
+    </script>
 </head>
 <body {% block bodyclass %}{% endblock %}>
     <nav class="navbar navbar-default navbar-fixed-top">
