Adicionando imagem de OG

--- a/plataforma/templates/base.html
+++ b/plataforma/templates/base.html
@@ -18,6 +18,19 @@
     <meta name="author" content="Bode.io">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
+    <!-- OPEN GRAPH -->
+    <meta property="og:locale" content="pt_BR">
+    <meta property="og:url" content="www.prsp.me">
+    <meta property="og:site_name" content="Prospera">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Prospera">
+    <meta property="og:description" content="Organizações Modelo Abundante">
+    <meta property="og:image" content="{% static 'img/og.jpg' %}">
+    <meta property="og:image:type" content="image/jpg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+
+    <!-- FAVICONS -->
     <link rel="apple-touch-icon" sizes="57x57" href="{% static 'img/favicon/apple-icon-57x57.png' %}">
     <link rel="apple-touch-icon" sizes="60x60" href="{% static 'img/favicon/apple-icon-60x60.png' %}">
     <link rel="apple-touch-icon" sizes="72x72" href="{% static 'img/favicon/apple-icon-72x72.png' %}">
